--- a/main.html
+++ b/main.html
@@ -14,6 +14,8 @@
 <!--Declare the document head -->
 <head>
     <meta charset="UTF-8">
+    <!--This meta tag ensures responsiveness across different devices.-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intelligent Learning</title>
 </head>
 
@@ -23,13 +25,15 @@
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
+            <!-- Title -->
+            Assignments
             <!--Create breadcrumbs to show current path-->
             <ul class="breadcrumb">
                 <li>
                     <i class="material-icons md-house icon-align">home</i>
                 </li>
             </ul>
-            <!-- Title -->
+
             <!-- Add spacer, to align navigation to the right -->
             <div class="mdl-layout-spacer"></div>
             <!-- Navigation. We hide it in small screens. -->
@@ -55,13 +59,13 @@
             <!-- Content goes here -->
             <div id="weekly-exercises-container" class="exercises-weekly-container">
                 <div class="text-container exercises-weekly-text-container">
-                    Uppgifter vecka 1
+                    Uppgifter
                 </div>
                 <div id="exerciseContainer" class="exercise-container">
                     <!-- Add exercise cards using js here. -->
                 </div>
                 <div class="text-container exercises-weekly-text-container">
-                    Uppgifter vecka 2
+                    <!--Uppgifter vecka 2-->
                 </div>
             </div>
         </div>
