Fixed a small syntax error on line 33 in exercise.js by adding a pair of brackets on line 19.

--- a/exercise_page.html
+++ b/exercise_page.html
@@ -23,7 +23,7 @@
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
             <!--Title-->
-            Assignments
+            <span class="mdl-layout-title">Dashboard</span>
             <!--Create breadcrumbs to show current path-->
             <ul class="breadcrumb">
                 <li><a href="main.html"><i class="material-icons md-house icon-align">home</i></a></li>
