--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
             <!-- Title -->
-            Assignments
+            <span class="mdl-layout-title">Dashboard</span>
             <!--Create breadcrumbs to show current path-->
             <ul class="breadcrumb">
                 <li>
@@ -38,20 +38,20 @@
             <div class="mdl-layout-spacer"></div>
             <!-- Navigation. We hide it in small screens. -->
             <nav class="mdl-navigation mdl-layout--large-screen-only">
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
+                <!--<a class="mdl-navigation__link" href="">Link</a>-->
+                <!--<a class="mdl-navigation__link" href="">Link</a>-->
+                <!--<a class="mdl-navigation__link" href="">Link</a>-->
+                <!--<a class="mdl-navigation__link" href="">Link</a>-->
             </nav>
         </div>
     </header>
     <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">Links</span>
+        <span class="mdl-layout-title">Under arbete</span>
         <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
+            <!--<a class="mdl-navigation__link" href="">Link</a>-->
+            <!--<a class="mdl-navigation__link" href="">Link</a>-->
+            <!--<a class="mdl-navigation__link" href="">Link</a>-->
+            <!--<a class="mdl-navigation__link" href="">Link</a>-->
         </nav>
     </div>
     <main class="mdl-layout__content">
