Started changing font for text components.

--- a/exercise_page.html
+++ b/exercise_page.html
@@ -44,6 +44,7 @@
         <div id="mainDiv" class="page-content">
             <!-- Content goes here -->
             <div class="question-container">
+                <!--TODO change font for title and text to correct material design font.-->
                 <div class="text-container" id="questionTitle"></div>
                 <div class="text-container" id="questionText">
                     Default text
