--- a/main.html
+++ b/main.html
@@ -58,9 +58,10 @@
         <div class="page-content">
             <!-- Content goes here -->
             <div id="weekly-exercises-container" class="exercises-weekly-container">
-                <div class="text-container exercises-weekly-text-container">
-                    Uppgifter
-                </div>
+                <!--<div class="text-container exercises-weekly-text-container">-->
+                    <!--Uppgifter-->
+                <!--</div>-->
+                <span class="mdl-layout-title exercises-weekly-text-container">Uppgifter</span>
                 <div id="exerciseContainer" class="exercise-container">
                     <!-- Add exercise cards using js here. -->
                 </div>
