Assigns the exercises to the correct grid positions, but for some reason they aren't displayed properly.

--- a/main.html
+++ b/main.html
@@ -61,8 +61,10 @@
                 <div class="text-container exercises-weekly-text-container">
                     Uppgifter
                 </div>
-                <div id="exerciseContainer" class="exercise-container">
-                    <!-- Add exercise cards using js here. -->
+                <div style="overflow-x:scroll;">
+                    <div id="exerciseContainer" class="exercise-container">
+                        <!-- Add exercise cards using js here. -->
+                    </div>
                 </div>
                 <div class="text-container exercises-weekly-text-container">
                     <!--Uppgifter vecka 2-->
