--- a/exercise_page.html
+++ b/exercise_page.html
@@ -23,7 +23,7 @@
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
             <!--Title-->
-            <span class="mdl-layout-title">Dashboard</span>
+            <span class="mdl-layout-title">Uppgiftsvy</span>
             <!--Create breadcrumbs to show current path-->
             <ul class="breadcrumb">
                 <li><a href="main.html"><i class="material-icons md-house icon-align">home</i></a></li>
@@ -65,17 +65,17 @@
                     <span class="text-container" id="answerStatus"></span>
                 </div>
             </div>
-            <footer class="mdl-mini-footer">
-                <div class="mdl-mini-footer__left-section">
-                    <div class="mdl-logo">Intelligent Learning</div>
-                    <u1 class="mdl-mini-footer__link-list">
-                        <li><a href="main.html">Help</a></li>
-                        <li><a href="main.html">Privacy & Terms</a></li>
-                    </u1>
-                </div>
-            </footer>
         </div>
     </main>
+    <footer class="mdl-mini-footer">
+        <div class="mdl-mini-footer__left-section">
+            <div class="mdl-logo">Intelligent Learning</div>
+            <u1 class="mdl-mini-footer__link-list">
+                <li><a href="main.html">Help</a></li>
+                <li><a href="main.html">Privacy & Terms</a></li>
+            </u1>
+        </div>
+    </footer>
 </div>
 </html>
 
