Started working on cross plattform layout

--- a/exercise_page.html
+++ b/exercise_page.html
@@ -128,7 +128,7 @@
         // Set question title
         let questionTitle = document.getElementById("questionTitle");
         questionTitle.innerText = exerciseName;
-        questionTitle.style.fontSize = "35px"; //Set the title font size
+        questionTitle.style.fontSize = "200%"; //Set the title font size
 
         // Set question image - Overrides the default image if an image can be found
         document.getElementById("questionImage").src = exerciseJSON.image_path;
