Continued working on mobile layout

--- a/main.html
+++ b/main.html
@@ -57,17 +57,17 @@
     <main class="mdl-layout__content">
         <div class="page-content">
             <!-- Content goes here -->
-            <div id="weekly-exercises-container" class="exercises-weekly-container">
+            <div id="weekly-exercises-container"class="exercises-weekly-container">
                 <!--<div class="text-container exercises-weekly-text-container">-->
                     <!--Uppgifter-->
                 <!--</div>-->
                 <span class="mdl-layout-title exercises-weekly-text-container">Uppgifter</span>
-                <div id="exerciseContainer" class="exercise-container">
+                <div id="exerciseContainer"  class="exercise-container">
                     <!-- Add exercise cards using js here. -->
                 </div>
-                <div class="text-container exercises-weekly-text-container">
-                    <!--Uppgifter vecka 2-->
-                </div>
+                <!--<div class="text-container exercises-weekly-text-container">-->
+                    <!--&lt;!&ndash;Uppgifter vecka 2&ndash;&gt;-->
+                <!--</div>-->
             </div>
         </div>
     </main>
