--- a/main.html
+++ b/main.html
@@ -46,7 +46,7 @@
         </div>
     </header>
     <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">Under arbete</span>
+        <span class="mdl-layout-title">Testversion 1.0</span>
         <nav class="mdl-navigation">
             <!--<a class="mdl-navigation__link" href="">Link</a>-->
             <!--<a class="mdl-navigation__link" href="">Link</a>-->
