--- a/exercise_page.html
+++ b/exercise_page.html
@@ -20,7 +20,7 @@
 
 <!-- Always shows a header, even in smaller screens-->
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header">
+    <header class="mdl-layout__header" style="max-width: 50%;">
         <div class="mdl-layout__header-row">
             <!--Title-->
             <span class="mdl-layout-title">Uppgiftsvy</span>
