--- a/exercise_page.html
+++ b/exercise_page.html
@@ -20,7 +20,7 @@
 
 <!-- Always shows a header, even in smaller screens-->
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header" style="max-width: 50%;">
+    <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
             <!--Title-->
             <span class="mdl-layout-title">Uppgiftsvy</span>
@@ -41,7 +41,7 @@
         </nav>
     </div>
     <main class="mdl-layout__content">
-        <div id="mainDiv" class="page-content">
+        <div id="mainDiv" class="page-content" style="max-width: 50%;">
             <!-- Content goes here -->
             <div class="question-container">
                 <!--TODO change font for title and text to correct material design font.-->
