--- a/exercise_page.html
+++ b/exercise_page.html
@@ -41,7 +41,7 @@
         </nav>
     </div>
     <main class="mdl-layout__content">
-        <div id="mainDiv" class="page-content" style="max-width: 50%;">
+        <div id="mainDiv" class="page-content">
             <!-- Content goes here -->
             <div class="question-container">
                 <!--TODO change font for title and text to correct material design font.-->
