--- a/exercise_page.html
+++ b/exercise_page.html
@@ -123,7 +123,7 @@
         exerciseJSON = fetchExerciseInformationByID(temp[1]);
         let exerciseName = exerciseJSON.title;
 
-        element.innerText = exerciseName;
+        // element.innerText = exerciseName;
 
         // Set question title
         let questionTitle = document.getElementById("questionTitle");
