Added submit button to exercise page

--- a/exercise_page.html
+++ b/exercise_page.html
@@ -63,6 +63,7 @@
                         <span class="mdl-textfield__error">Input is not a number!</span>
                     </div>
                     <!--Create a container that will tell whether the result was right or wrong-->
+                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised submit-button" onclick="checkResult()">Submit</button>
                     <span class="text-container" id="answerStatus"></span>
                 </div>
             </div>
