--- a/exercise_page.html
+++ b/exercise_page.html
@@ -65,6 +65,7 @@
                     <!--Create a container that will tell whether the result was right or wrong-->
                     <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised submit-button" onclick="checkResult()">Submit</button>
                     <span class="text-container" id="answerStatus"></span>
+                    <i id="answerIcon" class=""></i>
                 </div>
             </div>
         </div>
@@ -98,19 +99,29 @@
     function checkResult() {
         let userInput = Number(document.getElementById("exerciseAnswer").value);
         let answerStatus = document.getElementById("answerStatus");
+        let answerIcon = document.getElementById("answerIcon");
+        let answerInput = document.getElementById("exerciseAnswer");
         exerciseJSON.tries++;
         exerciseJSON.last_answer = userInput;
         console.log("Try number " + exerciseJSON.tries + ":");
         if (userInput === Number(exerciseJSON.exercise_answer)) {
             console.log("Answer is right!");
             exerciseJSON.status = "completed";
-            answerStatus.innerText = "Correct";
+            // answerStatus.innerText = "Correct";
             answerStatus.style.color = "#39b728";
+            answerIcon.innerText="check";
+            answerIcon.className = "material-icons icon-align md-answer-icon correct-animation";
+            answerIcon.style.color = "#39b728";
+            answerInput.style.borderColor = "#39b728";
         } else {
             console.log("Answer is wrong!");
             exerciseJSON.status = "started";
-            answerStatus.innerText = "Incorrect";
-            answerStatus.style.color = "#b72828";
+            // answerStatus.innerText = "Incorrect";
+            answerStatus.style.color = "rgb(213,0,0)";
+            answerIcon.innerText="error_outline";
+            answerIcon.className = "material-icons icon-align md-answer-icon";
+            answerIcon.style.color = "rgb(213,0,0)";
+            answerInput.style.borderColor = "rgb(213,0,0)"
         }
         saveExerciseInformation(exerciseJSON);
     }
