Spaced checkmark differently

--- a/exercise_page.html
+++ b/exercise_page.html
@@ -118,9 +118,10 @@
             exerciseJSON.status = "started";
             // answerStatus.innerText = "Incorrect";
             answerStatus.style.color = "rgb(213,0,0)";
-            answerIcon.innerText="error_outline";
-            answerIcon.className = "material-icons icon-align md-answer-icon";
-            answerIcon.style.color = "rgb(213,0,0)";
+            //Remove this icon and just have the red border?
+            // answerIcon.innerText="error_outline";
+            // answerIcon.className = "material-icons icon-align md-answer-icon";
+            // answerIcon.style.color = "rgb(213,0,0)";
             answerInput.style.borderColor = "rgb(213,0,0)"
         }
         saveExerciseInformation(exerciseJSON);
