--- a/main.html
+++ b/main.html
@@ -54,10 +54,10 @@
             <!--<a class="mdl-navigation__link" href="">Link</a>-->
         </nav>
     </div>
-    <main class="mdl-layout__content">
+    <main class="mdl-layout__content" style="background-color: #FAFAFA;">
         <div class="page-content">
             <!-- Content goes here -->
-            <div id="weekly-exercises-container"class="exercises-weekly-container">
+            <div id="weekly-exercises-container"class="exercises-weekly-container" style="background-color: #FFFFFF;">
                 <!--<div class="text-container exercises-weekly-text-container">-->
                     <!--Uppgifter-->
                 <!--</div>-->
@@ -71,15 +71,15 @@
             </div>
         </div>
     </main>
-    <!--<footer class="mdl-mini-footer">-->
-        <!--<div class="mdl-mini-footer__left-section">-->
-            <!--<div class="mdl-logo">Intelligent Learning</div>-->
-            <!--<u1 class="mdl-mini-footer__link-list">-->
-                <!--<li><a href="main.html">Help</a></li>-->
-                <!--<li><a href="main.html">Privacy & Terms</a></li>-->
-            <!--</u1>-->
-        <!--</div>-->
-    <!--</footer>-->
+    <footer class="mdl-mini-footer">
+        <div class="mdl-mini-footer__left-section">
+            <div class="mdl-logo">Intelligent Learning</div>
+            <u1 class="mdl-mini-footer__link-list">
+                <li><a href="main.html">Help</a></li>
+                <li><a href="main.html">Privacy & Terms</a></li>
+            </u1>
+        </div>
+    </footer>
 </div>
 
 
