--- a/exercise_page.html
+++ b/exercise_page.html
@@ -41,7 +41,7 @@
             <!--<a class="mdl-navigation__link" href="">Link</a>-->
         </nav>
     </div>
-    <main class="mdl-layout__content" style="background-color: #f5f5f5;">
+    <main class="mdl-layout__content" style="background-color: #FAFAFA;">
         <div id="mainDiv" class="page-content">
             <!-- Content goes here -->
             <div class="question-container" style="background-color: #FFFFFF;">
@@ -70,15 +70,15 @@
             </div>
         </div>
     </main>
-    <!--<footer class="mdl-mini-footer">-->
-        <!--<div class="mdl-mini-footer__left-section">-->
-            <!--<div class="mdl-logo">Intelligent Learning</div>-->
-            <!--<u1 class="mdl-mini-footer__link-list">-->
-                <!--<li><a href="main.html">Help</a></li>-->
-                <!--<li><a href="main.html">Privacy & Terms</a></li>-->
-            <!--</u1>-->
-        <!--</div>-->
-    <!--</footer>-->
+    <footer class="mdl-mini-footer">
+        <div class="mdl-mini-footer__left-section">
+            <div class="mdl-logo">Intelligent Learning</div>
+            <u1 class="mdl-mini-footer__link-list">
+                <li><a href="main.html">Help</a></li>
+                <li><a href="main.html">Privacy & Terms</a></li>
+            </u1>
+        </div>
+    </footer>
 </div>
 </html>
 
