Continued working on footer

--- a/exercise_page.html
+++ b/exercise_page.html
@@ -41,7 +41,7 @@
             <!--<a class="mdl-navigation__link" href="">Link</a>-->
         </nav>
     </div>
-    <main class="mdl-layout__content" style="background-color: #FAFAFA;">
+    <main class="mdl-layout__content main-content" >
         <div id="mainDiv" class="page-content">
             <!-- Content goes here -->
             <div class="question-container" style="background-color: #FFFFFF;">
