Continued working on footer

--- a/main.html
+++ b/main.html
@@ -54,7 +54,7 @@
             <!--<a class="mdl-navigation__link" href="">Link</a>-->
         </nav>
     </div>
-    <main class="mdl-layout__content" style="background-color: #FAFAFA;">
+    <main class="mdl-layout__content main-content">
         <div class="page-content">
             <!-- Content goes here -->
             <div id="weekly-exercises-container"class="exercises-weekly-container" style="background-color: #FFFFFF;">
