--- a/main.html
+++ b/main.html
@@ -54,8 +54,8 @@
             <!--<a class="mdl-navigation__link" href="">Link</a>-->
         </nav>
     </div>
-    <main class="mdl-layout__content main-content">
-        <div class="page-content">
+    <main class="mdl-layout__content" style="background-color: #FAFAFA;">
+        <div class="page-content main-content">
             <!-- Content goes here -->
             <div id="weekly-exercises-container"class="exercises-weekly-container" style="background-color: #FFFFFF;">
                 <!--<div class="text-container exercises-weekly-text-container">-->
@@ -73,10 +73,10 @@
         <footer class="mdl-mini-footer footer">
             <div class="mdl-mini-footer__left-section">
                 <div class="mdl-logo">Intelligent Learning</div>
-                <u1 class="mdl-mini-footer__link-list">
-                    <li><a href="main.html">Help</a></li>
-                    <li><a href="main.html">Privacy & Terms</a></li>
-                </u1>
+                <!--<u1 class="mdl-mini-footer__link-list">-->
+                    <!--<li><a href="main.html">Help</a></li>-->
+                    <!--<li><a href="main.html">Privacy & Terms</a></li>-->
+                <!--</u1>-->
             </div>
         </footer>
     </main>
