Created two versions of feedback for mobile or desktop

--- a/exercise_page.html
+++ b/exercise_page.html
@@ -65,7 +65,7 @@
                     <!--Create a container that will tell whether the result was right or wrong-->
                     <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised submit-button" onclick="checkResult()">Submit</button>
                     <!--<span class="text-container" id="answerStatus"></span>-->
-                    <i id="answerIcon"></i>
+                    <i id="answerIcon" class="material-icons icon-align md-answer-icon" style="color: rgba(1,1,1,0)">clear</i>
                 </div>
             </div>
         </div>
